Modify access rules

--- a/project.config
+++ b/project.config
@@ -25,5 +25,6 @@
 [access "refs/heads/releases/*"]
 	forgeAuthor = group mdb/copybara-git-writers
 	push = group mdb/copybara-git-writers
+	push = group mdb/fuchsia-infra
 	push = block group Anonymous Users
 	push = block group Registered Users
